# domains/admin/admin.controller.js
@@ -72,7 +72,7 @@ export const deletePostController = async (req, res, next) => {
 
 export const unreadUserListController = async(req, res, next) => { 
   try {
-    const result = await unreadUserListService(req.params.postId);
+    const result = await unreadUserListService(req.params["post-id"]);
     res.status(200).json(response(status.SUCCESS, result));
   } catch (error) {
     next(error);
@@ -99,7 +99,7 @@ export const userProfileController = async (req, res, next) => {
 
 export const userInviteController = async (req, res, next) => {
   try {
-    const result = await userInviteService(req.params.roomId);
+    const result = await userInviteService(req.params["room-id"]);
     res.status(200).json(response(status.SUCCESS, result));
   } catch (error) {
     next(error);
